--- a/safety.html
+++ b/safety.html
@@ -35,7 +35,7 @@
         
         <label for="check1" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check1" onClick="ckDisable(this)"/>
+            <input type="checkbox" name="safety" class="checkbox" id="check1"/>
             <div class="checkmark"></div>
         </label>
     </div>
@@ -50,7 +50,7 @@
     <div class="content">
         <label for="check2" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check2" onClick="ckDisable(this)" />
+            <input type="checkbox" name="safety" class="checkbox" id="check2"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -61,7 +61,7 @@
     <div class="content">
         <label for="check3" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check3" onClick="ckDisable(this)"/>
+            <input type="checkbox" name="safety" class="checkbox" id="check3" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -75,7 +75,7 @@
     <div class="content">
         <label for="check4" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check4" onClick="ckDisable(this)" />
+            <input type="checkbox" name="safety" class="checkbox" id="check4" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -86,7 +86,7 @@
     <div class="content">
         <label for="check5" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check5"  onClick="ckDisable(this)"/>
+            <input type="checkbox" name="safety" class="checkbox" id="check5"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -99,7 +99,7 @@
     <div class="content">
         <label for="check6" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check6" onClick="ckDisable(this)" />
+            <input type="checkbox" name="safety" class="checkbox" id="check6"/>
             <div class="checkmark"></div>
         </label>
     </div>
@@ -111,7 +111,7 @@
     <div class="content">
         <label for="check7" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check7" onClick="ckDisable(this)" />
+            <input type="checkbox" name="safety" class="checkbox" id="check7" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -124,7 +124,7 @@
     <div class="content">
         <label for="check8" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check8" onClick="ckDisable(this)" />
+            <input type="checkbox" name="safety" class="checkbox" id="check8"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -135,7 +135,7 @@
     <div class="content">
         <label for="check9" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check9" onClick="ckDisable(this)"/>
+            <input type="checkbox" name="safety" class="checkbox" id="check9" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -147,7 +147,7 @@
     <div class="content">
         <label for="check10" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox" name="safety" class="checkbox" id="check10" onClick="ckDisable(this)"  />
+            <input type="checkbox" name="safety" class="checkbox" id="check10"  />
             <div class="checkmark"></div>
         </label>
     </div>
