--- a/safety.html
+++ b/safety.html
@@ -35,7 +35,7 @@
         
         <label for="check1" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check1" />
+            <input type="checkbox" name="safety" class="checkbox" id="check1"/>
             <div class="checkmark"></div>
         </label>
     </div>
@@ -50,7 +50,7 @@
     <div class="content">
         <label for="check2" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check2" />
+            <input type="checkbox" name="safety" class="checkbox" id="check2"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -61,7 +61,7 @@
     <div class="content">
         <label for="check3" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check3" />
+            <input type="checkbox" name="safety" class="checkbox" id="check3" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -75,7 +75,7 @@
     <div class="content">
         <label for="check4" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check4" />
+            <input type="checkbox" name="safety" class="checkbox" id="check4"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -86,7 +86,7 @@
     <div class="content">
         <label for="check5" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check5" />
+            <input type="checkbox" name="safety" class="checkbox" id="check5"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -99,7 +99,7 @@
     <div class="content">
         <label for="check6" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check6" />
+            <input type="checkbox" name="safety" class="checkbox" id="check6"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -111,7 +111,7 @@
     <div class="content">
         <label for="check7" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check7" />
+            <input type="checkbox" name="safety" class="checkbox" id="check7"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -124,7 +124,7 @@
     <div class="content">
         <label for="check8" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check8" />
+            <input type="checkbox" name="safety" class="checkbox" id="check8"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -135,7 +135,7 @@
     <div class="content">
         <label for="check9" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check9" />
+            <input type="checkbox" name="safety" class="checkbox" id="check9" />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -147,7 +147,7 @@
     <div class="content">
         <label for="check10" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check10" />
+            <input type="checkbox" name="safety" class="checkbox" id="check10"   />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -159,7 +159,7 @@
     <div class="content">
         <label for="check11" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check11" />
+            <input type="checkbox" name="safety" class="checkbox" id="check11"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -171,7 +171,7 @@
     <div class="content">
         <label for="check12" class="container"> 
             <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check12" />
+            <input type="checkbox" name="safety" class="checkbox" id="check12"  />
             <div class="checkmark"></div>
         </label>
     </div>
@@ -181,8 +181,8 @@
 <div class="data-item">
     <div class="content">
         <label for="check13" class="container"> 
-            <img src="thermal_checking.png" > 
-            <input type="checkbox"  class="checkbox" id="check13" />
+            <img src="homesafety.png" > 
+            <input type="checkbox"  name="safety" class="checkbox" id="check13" onClick="ckChange(this)"/>
             <div class="checkmark"></div>
         </label>
     </div>
@@ -198,5 +198,3 @@
 </body>
 <script src="form (1).js"></script>
 </html>
-
-
