--- a/thankyou.html
+++ b/thankyou.html
@@ -1,24 +1,47 @@
-
 <html>
 <style>
-
+.image{
+  
+  width:100%;
+  text-align: center;
+}
 img {
-width: 200px;
+width: 250px;
 }
-div {
-display: flex;
-justify-content: center; 
+.content{
+  padding:5%;
+  text-align: center;
 }
-span{
-display:block;
+.heading1{
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 2%;
+}
+.heading2{
+  text-align: center;
+  font-size: 1.9rem;
+  padding: 2%;
+}
+
+.fullcontent{
+ 
+      width: 60%;
+      height:400px;
+      margin-top:30%;
+      margin-left: 20%;
+      text-align: center;
 }
 </style>
+<body>
+<div class="fullcontent">
 
-<div>
-
-<img src="https://thumbs.dreamstime.com/b/flat-round-check-mark-green-icon-button-tick-symbol-isolated-white-background-vector-eps-143476687.jpg"/ >
-<span>
-<h1> Thank you for your time</h1>
-<h2> This will help us make bus travel safer</h2>
-</span >
-</div></html>
+<div class="image"><img src="https://thumbs.dreamstime.com/b/flat-round-check-mark-green-icon-button-tick-symbol-isolated-white-background-vector-eps-143476687.jpg">
+</div>
+<div class="content">
+<div class="heading1"> Thank you for your time.</div>
+<div class="heading2"> This will help us make bus travel safer</div>
+</div >
+</div>
+</body>
+</html>
